components/policies/pod-security-standards/restricted/require-run-as-nonroot/policy.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-run-as-nonroot
  labels:
    app.kubernetes.io/name: require-run-as-nonroot
    app.kubernetes.io/component: pod-security-standards-restricted
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:    [""]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["pods"]
        scope:        "Namespaced"
      - apiGroups:    ["apps"]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["daemonsets", "deployments", "statefulsets"]
        scope:        "Namespaced"
      - apiGroups:    ["batch"]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["cronjobs", "jobs"]
        scope:        "Namespaced"
  variables:
    - expression: object.spec.?template.?spec.?securityContext.?runAsNonRoot
      name: controllerRunAsNonRoot
    - expression: object.spec.?jobTemplate.?spec.?template.?spec.?securityContext.?runAsNonRoot
      name: cronJobRunAsNonRoot
    - expression: object.spec.?securityContext.?runAsNonRoot
      name: podRunAsNonRoot
    - expression: variables.controllerRunAsNonRoot.or(variables.cronJobRunAsNonRoot).or(variables.podRunAsNonRoot)
      name: allRunAsNonRoot
    - expression:
        object.spec.?template.?spec.?containers.orValue([]) +
        object.spec.?template.?spec.?initContainers.orValue([]) +
        object.spec.?template.?spec.?ephemeralContainers.orValue([])
      name: controllerContainer
    - expression:
        object.spec.?jobTemplate.?spec.?template.?spec.?containers.orValue([]) +
        object.spec.?jobTemplate.?spec.?template.?spec.?initContainers.orValue([]) +
        object.spec.?jobTemplate.?spec.?template.?spec.?ephemeralContainers.orValue([])
      name: cronJobContainers
    - expression:
        object.spec.?containers.orValue([]) +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])
      name: podContainers
    - expression: variables.controllerContainer + variables.cronJobContainers + variables.podContainers
      name: allContainers
  validations:
    - expression:
        variables.allContainers.all(container,
          container.?securityContext.?runAsNonRoot.or(variables.allRunAsNonRoot).orValue(false) == true)
      message: Running as root is forbidden. The field securityContext.runAsNonRoot must be set to 'true'
      reason: Invalid
  auditAnnotations:
    - key: name
      valueExpression: string(object.metadata.name)
