components/policies/pod-security-standards/restricted/require-run-as-nonroot/test/job-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob01
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob02
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            runAsNonRoot: false
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob03
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        runAsNonRoot: false
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob04
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            runAsNonRoot: false
      securityContext:
        runAsNonRoot: true
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob05
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob06
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          securityContext:
            runAsNonRoot: false
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob07
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
      securityContext:
        runAsNonRoot: false
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob08
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          securityContext:
            runAsNonRoot: false
      securityContext:
        runAsNonRoot: true
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob09
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            runAsNonRoot: true
        - name: container02
          image: dummyimagename
          securityContext:
            runAsNonRoot: false
      securityContext:
        runAsNonRoot: true
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob10
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            runAsNonRoot: false
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            runAsNonRoot: true
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob11
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            runAsNonRoot: true
      securityContext:
        runAsNonRoot: false
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob12
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            runAsNonRoot: false
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            runAsNonRoot: true
      securityContext:
        runAsNonRoot: true
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob13
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            runAsNonRoot: true
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob14
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            runAsNonRoot: false
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            runAsNonRoot: true
---
apiVersion: batch/v1
kind: Job
metadata:
  name: badjob15
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        runAsNonRoot: false
---
