components/policies/pod-security-standards/restricted/require-run-as-nonroot/test/kyverno-test.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-nonroot
policies:
  - ../policy.yaml
resources:
  - cronjob-bad.yaml
  - cronjob-good.yaml
  - deployment-bad.yaml
  - deployment-good.yaml
  - job-bad.yaml
  - job-good.yaml
  - pod-bad.yaml
  - pod-good.yaml
results:
  - kind: CronJob
    policy: require-run-as-nonroot
    isValidatingAdmissionPolicy: true
    resources:
      - badcronjob01
      - badcronjob02
      - badcronjob03
      - badcronjob04
      - badcronjob05
      - badcronjob06
      - badcronjob07
      - badcronjob08
      - badcronjob09
      - badcronjob10
      - badcronjob11
      - badcronjob12
      - badcronjob13
      - badcronjob14
      - badcronjob15
    result: fail
  - kind: CronJob
    policy: require-run-as-nonroot
    isValidatingAdmissionPolicy: true
    resources:
      - goodcronjob01
      - goodcronjob02
      - goodcronjob03
      - goodcronjob04
      - goodcronjob05
      - goodcronjob06
      - goodcronjob07
      - goodcronjob08
      - goodcronjob09
      - goodcronjob10
    result: pass
  - kind: Deployment
    policy: require-run-as-nonroot
    isValidatingAdmissionPolicy: true
    resources:
      - baddeployment01
      - baddeployment02
      - baddeployment03
      - baddeployment04
      - baddeployment05
      - baddeployment06
      - baddeployment07
      - baddeployment08
      - baddeployment09
      - baddeployment10
      - baddeployment11
      - baddeployment12
      - baddeployment13
      - baddeployment14
      - baddeployment15
    result: fail
  - kind: Deployment
    policy: require-run-as-nonroot
    isValidatingAdmissionPolicy: true
    resources:
      - gooddeployment01
      - gooddeployment02
      - gooddeployment03
      - gooddeployment04
      - gooddeployment05
      - gooddeployment06
      - gooddeployment07
      - gooddeployment08
      - gooddeployment09
      - gooddeployment10
    result: pass
  - kind: Job
    policy: require-run-as-nonroot
    isValidatingAdmissionPolicy: true
    resources:
      - badjob01
      - badjob02
      - badjob03
      - badjob04
      - badjob05
      - badjob06
      - badjob07
      - badjob08
      - badjob09
      - badjob10
      - badjob11
      - badjob12
      - badjob13
      - badjob14
      - badjob15
    result: fail
  - kind: Job
    policy: require-run-as-nonroot
    isValidatingAdmissionPolicy: true
    resources:
      - goodjob01
      - goodjob02
      - goodjob03
      - goodjob04
      - goodjob05
      - goodjob06
      - goodjob07
      - goodjob08
      - goodjob09
      - goodjob10
    result: pass
  - kind: Pod
    policy: require-run-as-nonroot
    isValidatingAdmissionPolicy: true
    resources:
      - badpod01
      - badpod02
      - badpod03
      - badpod04
      - badpod05
      - badpod06
      - badpod07
      - badpod08
      - badpod09
      - badpod10
      - badpod11
      - badpod12
      - badpod13
      - badpod14
      - badpod15
      - badpod16
    result: fail
  - kind: Pod
    policy: require-run-as-nonroot
    isValidatingAdmissionPolicy: true
    resources:
      - goodpod01
      - goodpod02
      - goodpod03
      - goodpod04
      - goodpod05
      - goodpod06
      - goodpod07
      - goodpod08
      - goodpod09
      - goodpod10
    result: pass
